@@ -1,0 +1,6 @@
+/* { dg-do run } */
+
+var stdin = open ("<stdin>");
+
+flush (stdin, 0#B);
+close (stdin);
